--- a/src/components/Elements/OffCanvasMenu.css
+++ b/src/components/Elements/OffCanvasMenu.css
@@ -40,6 +40,15 @@
     margin-left: 50px;
 }
 
+.burger-icon{
+    font-size: 25px;
+}
+
+
+.w-20{
+    width: 20%;
+}
+
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
